--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>hello Git and Github</h1>
     <h1>hello Git and Github version 2</h1>
-
+    <p>i am learning Git and Github</p>
 </body>
 </html>
